--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,17 +9,17 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=1
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/objects/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/game/objects/basic_grass_biom_things.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/", "res://assets/game/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=0
+dock_split_2=-127
 dock_split_3=0
 dock_hsplit_1=284
-dock_hsplit_2=370
+dock_hsplit_2=216
 dock_hsplit_3=-325
 dock_hsplit_4=0
 dock_7_selected_tab_idx=0
@@ -29,21 +29,22 @@ dock_split_1=0
 dock_1_selected_tab_idx=0
 dock_1="FileSystem"
 dock_3="Scene,Import"
-dock_5="Inspector,Node,History"
+dock_4="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray()
-current_scene=""
-center_split_offset=0
+open_scenes=PackedStringArray("res://scenes/test/test_scene_tilemap.tscn")
+current_scene="res://scenes/test/test_scene_tilemap.tscn"
+center_split_offset=-434
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
-screen=0
+screen=1
 mode="maximized"
-position=Vector2i(0, 34)
+position=Vector2i(1296, 34)
 
 [ScriptEditor]
 
