--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -5,3 +5,14 @@ executable_path="G:/steam/steamapps/common/Godot Engine/godot.windows.opt.tools.
 [dialog_bounds]
 
 editor_settings=Rect2(510, 143, 900, 700)
+create_new_node=Rect2(510, 143, 900, 700)
+project_settings=Rect2(360, 143, 1200, 700)
+
+[quick_open_dialog]
+
+last_mode=1
+
+[color_picker]
+
+picker_shape=3
+recent_presets=PackedColorArray(0, 0.373059, 0.744216, 1, 0.520181, 0.337111, 0.177585, 1, 0.792117, 0.00522984, 0.458897, 1)
